<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/dialog_width"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="@dimen/padding_large">

    <TextView
        style="@style/dialog_header"
        android:layout_width="match_parent"
        android:layout_height="@dimen/small_height"
        android:text="@string/room_dialog_heading" />

    <TextView
        style="@style/dialog_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_room_info" />

    <EditText
        android:id="@+id/edittext_room_name"
        style="@style/regular_editTexts"
        android:layout_width="match_parent"
        android:layout_height="@dimen/small_height"
        android:hint="@string/hint_room_name" />

    <Button
        android:id="@+id/button_room_submit"
        style="@style/regular_buttons"
        android:layout_width="match_parent"
        android:layout_height="@dimen/small_height"
        android:text="@string/text_submit" />
</LinearLayout>