<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textSteps2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="casual"
                android:gravity="center"
                android:text="Steps Taken"
                android:textAllCaps="true"
                android:textSize="24sp"
                android:textStyle="bold" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textSteps"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:fontFamily="casual"
                android:gravity="center"
                android:text="@string/steps_will_be_shown_here"
                android:textSize="24sp"
                android:textStyle="bold" />
        </TableRow>

    </TableLayout>

    <TableLayout
        android:id="@+id/tbLayout1"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="20dp"
        android:stretchColumns="0,1"
        tools:layout_marginTop="10dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/timer_text2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_marginTop="20dp"
                android:fontFamily="casual"
                android:text="Time"
                android:textAllCaps="true"
                android:textSize="18sp"
                android:textStyle="bold"
                android:typeface="monospace" />

            <TextView
                android:id="@+id/timer_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_marginTop="20dp"
                android:text="@string/time_elapsed"
                android:typeface="monospace" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textDistance2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="casual"
                android:text="@string/distance"
                android:textAllCaps="true"
                android:textSize="18sp"
                android:textStyle="bold"
                android:typeface="monospace" />

            <TextView
                android:id="@+id/textDistance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/distance"
                android:typeface="monospace" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textSpeed2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="casual"
                android:text="@string/speed"
                android:textAllCaps="true"
                android:textSize="18sp"
                android:textStyle="bold"
                android:typeface="monospace" />

            <TextView
                android:id="@+id/textSpeed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/speed"
                android:typeface="monospace" />

        </TableRow>

    </TableLayout>

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/buttonUpdateSteps"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/update_steps" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btnMockDt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Add 500 Steps" />

        </TableRow>

    </TableLayout>

    <Button
        android:id="@+id/btnEndRecord"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/end_btn_background"
        android:text="@string/endBtnStr" />

</LinearLayout>